<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="20dp">

        <AutoCompleteTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:inputType="textPersonName"
            android:hint="@string/partyname" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/type"
            android:layout_below="@+id/amount"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit"
                android:id="@+id/credit"
                android:checked="true"
                android:layout_weight="0.5" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debit"
                android:id="@+id/debit"
                android:layout_weight="0.5" />
        </RadioGroup>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/amount"
            android:layout_below="@+id/name"
            android:hint="@string/amount"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/date"
            android:layout_weight="0.8"
            android:layout_below="@+id/type"
            android:onClick="PickDate" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/detail"
            android:hint="@string/detail"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/date" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/button"
            android:layout_below="@+id/detail"
            android:layout_alignParentEnd="true"
            android:background="@color/menu"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/menu_text"
            android:textStyle="bold"
            android:onClick="AddTx" />

    </RelativeLayout>
</LinearLayout>